// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio render should render correctly 1`] = `
<Fragment>
  <Text
    aria-label="text input"
    isDisabled={false}
    items={Array []}
    onChange={[Function]}
    onSubmit={[Function]}
    value="undefined"
  />
</Fragment>
`;

exports[`Radio render should render correctly placeholder 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isInputValuePersisted={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText="some placeholder"
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={true}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Radio render should render correctly with items - isDisabled 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={true}
    isGrouped={false}
    isInputValuePersisted={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Radio render should render correctly with items 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isInputValuePersisted={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Radio render should render correctly with items and default value 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isInputValuePersisted={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={true}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Radio render should render correctly with items and selected value 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isInputValuePersisted={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={true}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isLoad={false}
      isLoading={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Select>
</Fragment>
`;
